Firebase authentication and navigation

--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -3,16 +3,21 @@
     package="com.eliasasskali.tfg.android">
 
     <application
+        android:name="com.eliasasskali.tfg.App"
         android:allowBackup="false"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.features.splash.SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.features.loginSignup.MainActivity"
+            android:exported="true">
         </activity>
     </application>
 </manifest> 
